# geom_predicates

./: CMakeLists.txt  predicates_boost.c  test.c  test.cpp  test_l.cpp
